--- a/css/style.css
+++ b/css/style.css
@@ -14,9 +14,11 @@ table {
     background-color: #f5f5f5;
 }
 .logo {
-    /* display: inline-block; */
     float: left;
-    padding: 14px 0 14px 30px;
+    padding-top: 14px;
+    padding-right: 0;
+    padding-bottom: 14px;
+    padding-left: 30px;
 }
 .info-top {
     margin-top: 26px; 
@@ -76,17 +78,25 @@ p {
    
 }
 .table-2 h4 {
-    margin: 26px 0 0 0;
-    padding: 0 0 0 16px;
+    margin-top: 26px;
+    margin-right: 0;
+    margin-bottom: 0;
+    margin-left: 0;
+    padding-top: 0;
+    padding-left: 0;
+    padding-bottom: 0;
+    padding-left: 16px;
     font-size: 14px;
-    line-height: 18px;
     color: #24242b;
     font-weight: bold;
 }
 .table-2 p {
     display: inline-block;
     margin: 0;
-    padding: 0 0 32px 16px;
+    padding-top: 0;
+    padding-right: 0;
+    padding-bottom: 32px;
+    padding-left: 16px;
     width: 166px;
     font-size: 13px;
     line-height: 18px;
@@ -125,9 +135,10 @@ p {
     background-image: url(../img/hata-newsletter\ \(1\).jpg);
     background-repeat: repeat;
     text-align: center;
-    font-family: "Arial";
 }
 .table-sale h2 {
+    margin: 0;
+    margin-top: 34px;
     font-size: 24px;
     line-height: 24px;
     color: #ffffff;
@@ -139,5 +150,53 @@ p {
     font-size: 13px;
     line-height: 20px;
     color: #fff;
-    
+}
+.table-sale td {
+    padding-bottom: 20px;
+}
+.button-join {
+    margin-bottom: 22px;
+}
+.button-join a {
+    margin-bottom: 2px;
+    padding-top: 12px;
+    padding-right: 22px;
+    padding-bottom: 12px;
+    padding-left: 22px;
+    background-color: #1f1f56;
+    font-size: 14px;
+    color: #fff;
+    font-weight: bold;
+    border-radius: 20px;
+    text-decoration: none;
+}
+.table-footer {
+    width: 600px;
+    background-color: #08081a;
+    text-align: center;
+}
+.table-footer-img {
+    padding-top: 30px;
+    padding-right: 36px;
+}
+.table-footer-img ul {
+    margin: 0;
+}
+.table-footer-img li {
+    display: inline-block;
+    padding-left: 8px;
+}
+.table-footer-copy{
+    padding-top: 22px;
+    font-size: 13px;
+    color: #9999a6;
+}
+.table-footer-unscrable {
+    margin-bottom: 16px;
+
+}
+.table-footer-unscrable a {
+    font-size: 11px;
+    color: #fd8300;
+    text-decoration: none;
 }
