--- a/css/style.css
+++ b/css/style.css
@@ -65,6 +65,8 @@ p {
     border-radius: 26px;
     background-color: #fd8300;
     text-decoration: none;
+    font-size: 14px;
+    font-weight: bold;
 }
 .table-2 {
     width: 600px; 
@@ -132,7 +134,7 @@ p {
     padding-bottom: 12px;
     padding-left: 20px;
     padding-right: 20px;
-    background-image: url(../img/hata-newsletter\ \(1\).jpg);
+    background-image: url(https://github.com/Svithm/hata-newsletter/blob/main/img/mini-foto.jpg?raw=true);
     background-repeat: repeat;
     text-align: center;
 }
@@ -141,7 +143,7 @@ p {
     margin-top: 34px;
     font-size: 24px;
     line-height: 24px;
-    color: #ffffff;
+    color: #fff;
     font-weight: bold;
 }
 .table-sale p {
